# buscaminas

./: .gitignore  Cargo.toml  tablero_normal_2.txt
src/: board.rs  board_elements.rs  file_management.rs  lib.rs  main.rs
tests/: integration_tests.rs
